--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 <img src="https://openweathermap.org/img/wn/03d.png" alt="" class="icon"/>
                 <div class="description">Cloudy</div>
                 </div>
+                <div class="country">Country: </div>
                 <div class="humidity">Humidity: 60%</div>
                 <div class="wind">Wind speed: 6.0 km/hr</div>
             </div>
